[metadata]
name = MaCh3PythonUtils
version = attr: MaCh3PythonUtils.__version__
url = https://github.com/mach3-software/MaCh3-PythonUtils/
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =src
include_package_data = true
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
include_package_data = true

[options.package_data]
MaCh3PythonUtils.data = *
MaCh3PythonUtils.data.process_manager = *

[options.entry_points]
console_scripts =
    mach3_python_utils = MaCh3PythonUtils.apps.__main_mach3_python_utils__:main